feat: Implement teacher request features (MODALITY_CHANGE, RESCHEDULE, SWAP) and attendance flow
- Add teacher request features:
  * MODALITY_CHANGE: Change session modality with resource validation
  * RESCHEDULE: Reschedule session with new date/time slot/resource
  * SWAP: Swap session with replacement teacher (with confirm/decline flow)
  * Staff view: Academic staff can view and approve/reject all requests
  * My sessions: Teacher can view future sessions with request status
  * Suggest resources: Suggest available resources for reschedule
  * Suggest swap candidates: Suggest replacement teachers for swap

- Add attendance flow:
  * Teacher attendance: Get sessions, save attendance, submit session report
  * Student attendance: Overview and detailed report by class
  * Attendance matrix: View class attendance matrix

- Add comprehensive unit and integration tests for all features